bin/testsuite/tests/compiler/src/compiler4917.swg
#global testerror "Err0685"
var #uniq45AA = 0 // swc-expected-error {{parser_err_invalid_compiler}}